force-app/main/default/objects/Case_Team_Member_Assignment__mdt/Case_Team_Member_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Use this to map user lookup fields on the case to case team member roles that will be created by the case trigger.</description>
    <label>Case Team Member Assignment</label>
    <pluralLabel>Case Team Member Assignments</pluralLabel>
</CustomObject>