force-app/main/default/objects/Case_Team_Member_Assignment__mdt/fields/Case_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Types__c</fullName>
    <description>Use the DeveloperName for the various Record Types. If you enter one that doesn&#39;t exist, this row will not be functional and there will be a debug statement in the code for record types that don&#39;t exist.</description>
    <inlineHelpText>Use the DeveloperName for the various Record Types. If you enter one that doesn&#39;t exist, this row will not be functional and there will be a debug statement in the code for record types that don&#39;t exist.</inlineHelpText>
    <label>Case Record Types</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>