force-app/main/default/objects/Case_Team_Member_Assignment__mdt/fields/Case_Team_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Team_Role_Name__c</fullName>
    <description>Holds the case team role name</description>
    <inlineHelpText>Enter the case team role name</inlineHelpText>
    <label>Case Team Role Name</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
</CustomField>