force-app/main/default/objects/Case_Team_Member_Assignment__mdt/fields/User_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Lookup_Field__c</fullName>
    <description>API name for user lookup fields</description>
    <inlineHelpText>API name for the user lookup field</inlineHelpText>
    <label>User Lookup Field</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
</CustomField>