force-app/main/default/objects/Case_Team_Member_Assignment__mdt/listViews/X001_All.listView-meta.xml
<ListView>
    <fullName>X001_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Case_Record_Types__c</columns>
    <columns>Case_Team_Role_Name__c</columns>
    <columns>User_Lookup_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>001 - All</label>
</ListView>